Working APG build based on OK sources

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':OpenKeychain'
+include ':apg'
 include ':extern:openpgp-api-lib:openpgp-api'
 include ':extern:openkeychain-api-lib:openkeychain-intents'
 include ':extern:spongycastle:core'
@@ -8,3 +8,4 @@ include ':extern:spongycastle:prov'
 include ':extern:minidns'
 include ':extern:KeybaseLib:Lib'
 include ':extern:safeslinger-exchange'
+//include ':OpenKeychain-Test'
