--- a/apg/src/main/AndroidManifest.xml
+++ b/apg/src/main/AndroidManifest.xml
@@ -74,7 +74,7 @@
         android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/KeychainTheme">
+        android:theme="@style/ApgTheme">
         <activity
             android:name=".ui.MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden|keyboard"
