Improve Travis CI build Performance

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,3 +34,8 @@ android:
 script:
     # - ./gradlew connectedAndroidTest
     - ./gradlew testDebug jacocoTestReport coveralls
+
+cache:
+  directories:
+  - $HOME/.gradle/caches/
+  - $HOME/.gradle/wrapper/
